@@ -89,7 +89,9 @@ func BenchmarkPatterns(b *testing.B) {
 		{"startsWith ' '", `^ `},
 		{"startsWithDate", `^\d{2}-\d{2}-\d{4}`},
 		{"startsWithDate2", `^\d{4}-\d{2}-\d{2}`},
-		{"startsWithDate3", `^20\d{2}-\d{2}-\d{2}`},
+		{"startsWithDate3", `^\d\d\d\d-\d\d-\d\d`},
+		{"startsWithDate4", `^20\d{2}-\d{2}-\d{2}`},
+		{"startsWithDateAndSpace", `^\d{4}-\d{2}-\d{2} `},
 		{"startsWithLevel", `^(DEBUG|INFO|WARN|ERR|CRIT)`},
 		{"hasLevel", `(DEBUG|INFO|WARN|ERR|CRIT)`},
 		{"contains 'PATTERN'", `PATTERN`},
